added the consolidated data

--- a/ash128.ipynb
+++ b/ash128.ipynb
@@ -14,26 +14,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] File 311.csv does not exist: '311.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-9c7d16bbe7a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"311.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"NEIGHBORHOOD\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'STATUS'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'COUNCIL_DISTRICT'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'WARD'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'TRACT'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PLI_DIVISION'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PUBLIC_WORKS_DIVISION'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'POLICE_ZONE'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'FIRE_ZONE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    674\u001b[0m         )\n\u001b[1;32m    675\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 676\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    446\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    447\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 448\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    449\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    450\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    878\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    879\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 880\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    881\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    882\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1112\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"c\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1113\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1114\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1115\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1116\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"python\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1889\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"usecols\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1890\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1891\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1892\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1893\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] File 311.csv does not exist: '311.csv'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REQUEST_ID</th>\n",
+       "      <th>CREATED_ON</th>\n",
+       "      <th>REQUEST_TYPE</th>\n",
+       "      <th>REQUEST_ORIGIN</th>\n",
+       "      <th>DEPARTMENT</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>GEO_ACCURACY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEIGHBORHOOD</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Central Northside</th>\n",
+       "      <td>203364.0</td>\n",
+       "      <td>2017-12-15T14:53:00</td>\n",
+       "      <td>Street Obstruction/Closure</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DOMI - Permits</td>\n",
+       "      <td>-80.016716</td>\n",
+       "      <td>40.454144</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South Side Flats</th>\n",
+       "      <td>200800.0</td>\n",
+       "      <td>2017-11-29T09:54:00</td>\n",
+       "      <td>Graffiti</td>\n",
+       "      <td>Control Panel</td>\n",
+       "      <td>Police - Zones 1-6</td>\n",
+       "      <td>-79.969952</td>\n",
+       "      <td>40.429243</td>\n",
+       "      <td>APPROXIMATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Troy Hill</th>\n",
+       "      <td>201310.0</td>\n",
+       "      <td>2017-12-01T13:23:00</td>\n",
+       "      <td>Litter</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DPW - Street Maintenance</td>\n",
+       "      <td>-79.985859</td>\n",
+       "      <td>40.459716</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Banksville</th>\n",
+       "      <td>200171.0</td>\n",
+       "      <td>2017-11-22T14:54:00</td>\n",
+       "      <td>Water Main Break</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>Pittsburgh Water and Sewer Authority</td>\n",
+       "      <td>-80.034210</td>\n",
+       "      <td>40.406969</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East Hills</th>\n",
+       "      <td>193043.0</td>\n",
+       "      <td>2017-10-12T12:46:00</td>\n",
+       "      <td>Guide Rail</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DPW - Construction Division</td>\n",
+       "      <td>-79.876582</td>\n",
+       "      <td>40.451226</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East Hills</th>\n",
+       "      <td>196521.0</td>\n",
+       "      <td>2017-10-31T15:17:00</td>\n",
+       "      <td>Guide Rail</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DPW - Construction Division</td>\n",
+       "      <td>-79.876823</td>\n",
+       "      <td>40.451165</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mount Washington</th>\n",
+       "      <td>193206.0</td>\n",
+       "      <td>2017-10-13T09:18:00</td>\n",
+       "      <td>Sidewalk/Curb/HC Ramp Maintenance</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DOMI - Permits</td>\n",
+       "      <td>-80.012499</td>\n",
+       "      <td>40.417230</td>\n",
+       "      <td>APPROXIMATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bluff</th>\n",
+       "      <td>195917.0</td>\n",
+       "      <td>2017-10-27T10:23:00</td>\n",
+       "      <td>Manhole Cover</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>DOMI - Permits</td>\n",
+       "      <td>-79.985586</td>\n",
+       "      <td>40.435263</td>\n",
+       "      <td>EXACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Middle Hill</th>\n",
+       "      <td>179176.0</td>\n",
+       "      <td>2017-08-14T14:00:00</td>\n",
+       "      <td>Neighborhood Issues</td>\n",
+       "      <td>Control Panel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-79.977726</td>\n",
+       "      <td>40.446142</td>\n",
+       "      <td>APPROXIMATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North Oakland</th>\n",
+       "      <td>190422.0</td>\n",
+       "      <td>2017-09-29T11:46:00</td>\n",
+       "      <td>Mayor's Office</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>311</td>\n",
+       "      <td>-79.949740</td>\n",
+       "      <td>40.448117</td>\n",
+       "      <td>APPROXIMATE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   REQUEST_ID           CREATED_ON  \\\n",
+       "NEIGHBORHOOD                                         \n",
+       "Central Northside    203364.0  2017-12-15T14:53:00   \n",
+       "South Side Flats     200800.0  2017-11-29T09:54:00   \n",
+       "Troy Hill            201310.0  2017-12-01T13:23:00   \n",
+       "Banksville           200171.0  2017-11-22T14:54:00   \n",
+       "East Hills           193043.0  2017-10-12T12:46:00   \n",
+       "East Hills           196521.0  2017-10-31T15:17:00   \n",
+       "Mount Washington     193206.0  2017-10-13T09:18:00   \n",
+       "Bluff                195917.0  2017-10-27T10:23:00   \n",
+       "Middle Hill          179176.0  2017-08-14T14:00:00   \n",
+       "North Oakland        190422.0  2017-09-29T11:46:00   \n",
+       "\n",
+       "                                        REQUEST_TYPE REQUEST_ORIGIN  \\\n",
+       "NEIGHBORHOOD                                                          \n",
+       "Central Northside         Street Obstruction/Closure    Call Center   \n",
+       "South Side Flats                            Graffiti  Control Panel   \n",
+       "Troy Hill                                     Litter    Call Center   \n",
+       "Banksville                          Water Main Break    Call Center   \n",
+       "East Hills                                Guide Rail    Call Center   \n",
+       "East Hills                                Guide Rail    Call Center   \n",
+       "Mount Washington   Sidewalk/Curb/HC Ramp Maintenance    Call Center   \n",
+       "Bluff                                 Manhole Cover     Call Center   \n",
+       "Middle Hill                      Neighborhood Issues  Control Panel   \n",
+       "North Oakland                         Mayor's Office        Website   \n",
+       "\n",
+       "                                             DEPARTMENT          X          Y  \\\n",
+       "NEIGHBORHOOD                                                                    \n",
+       "Central Northside                        DOMI - Permits -80.016716  40.454144   \n",
+       "South Side Flats                     Police - Zones 1-6 -79.969952  40.429243   \n",
+       "Troy Hill                      DPW - Street Maintenance -79.985859  40.459716   \n",
+       "Banksville         Pittsburgh Water and Sewer Authority -80.034210  40.406969   \n",
+       "East Hills                  DPW - Construction Division -79.876582  40.451226   \n",
+       "East Hills                  DPW - Construction Division -79.876823  40.451165   \n",
+       "Mount Washington                         DOMI - Permits -80.012499  40.417230   \n",
+       "Bluff                                    DOMI - Permits -79.985586  40.435263   \n",
+       "Middle Hill                                         NaN -79.977726  40.446142   \n",
+       "North Oakland                                       311 -79.949740  40.448117   \n",
+       "\n",
+       "                  GEO_ACCURACY  \n",
+       "NEIGHBORHOOD                    \n",
+       "Central Northside        EXACT  \n",
+       "South Side Flats   APPROXIMATE  \n",
+       "Troy Hill                EXACT  \n",
+       "Banksville               EXACT  \n",
+       "East Hills               EXACT  \n",
+       "East Hills               EXACT  \n",
+       "Mount Washington   APPROXIMATE  \n",
+       "Bluff                    EXACT  \n",
+       "Middle Hill        APPROXIMATE  \n",
+       "North Oakland      APPROXIMATE  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
