--- a/nka6.ipynb
+++ b/nka6.ipynb
@@ -395,8 +395,8 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"fire_incidents.csv\", index_col=\"neighborhood\")\n",
-    "data"
+    "data1 = pd.read_csv(\"fire_incidents.csv\", index_col=\"neighborhood\")\n",
+    "data1"
    ]
   },
   {
